<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_string">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="pref_button">Настройки</string>
    <string name="choose_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="license_agreement">Пользовательское соглашение</string>
    <string name="license_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="developer_email">gameover666999@yandex.ru</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="back_button_desc">Кнопка "назад"</string>
    <string name="clear_button_desc">Кнопка "очистить"</string>
    <string name="album_picture">Обложка альбома</string>
    <string name="arrow_forward">Стрелка "Вперёд"</string>
    <string name="search_error_placeholder">Ничего не нашлось</string>
    <string name="internet_error_placeholder">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refreshSearchButton">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="history_header">Вы искали</string>
    <string name="track_length">Длительность</string>
    <string name="year">Год</string>
    <string name="album_name">Альбом</string>
    <string name="genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play_button_desc">Кнопка плей</string>
    <string name="add_to_favourites">Добавить в любимое</string>
</resources>