<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PreferencesMainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/pref_back_button"
            style="@style/PreferencesBackArrow"
            android:contentDescription="@string/back_button_desc"
            android:src="@drawable/ic_back_arrow_24" />

        <TextView
            style="@style/PreferencesHeader"
            android:text="@string/pref_button" />
    </LinearLayout>

    <LinearLayout
        style="@style/PreferencesLinearLayout"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/PreferencesTextView"
            android:text="@string/choose_theme" />

        <View style="@style/PreferencesView" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/main_button_margin_side"
            android:checked="true"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/appShareButton"
        style="@style/PreferencesLinearLayout">

        <TextView
            style="@style/PreferencesTextView"
            android:text="@string/share_app" />

        <View style="@style/PreferencesView" />

        <ImageView
            style="@style/PreferencesImageView"
            android:src="@drawable/ic_share_new" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supportButton"
        style="@style/PreferencesLinearLayout">

        <TextView
            style="@style/PreferencesTextView"
            android:text="@string/support" />

        <View style="@style/PreferencesView" />

        <ImageView
            style="@style/PreferencesImageView"
            android:src="@drawable/ic_support" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/licenceAgreementButton"
        style="@style/PreferencesLinearLayout">

        <TextView
            style="@style/PreferencesTextView"
            android:text="@string/license_agreement" />

        <View style="@style/PreferencesView" />

        <ImageView
            style="@style/PreferencesImageView"
            android:src="@drawable/ic_arrow_forward" />
    </LinearLayout>


</LinearLayout>