<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    style="@style/MainBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/title_string"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/ys_display_medium"/>

    <Button
        android:id="@+id/search_button_pm"
        style="@style/MainWindowButtonStyle"
        android:layout_marginTop="40dp"
        android:text="@string/search_button"
        app:icon="@drawable/ic_loopa" />

    <Button
        android:id="@+id/media_button_pm"
        style="@style/MainWindowButtonStyle"
        android:layout_marginTop="@dimen/main_button_margin_side"
        android:text="@string/media_button"
        app:icon="@drawable/ic_media" />

    <Button
        android:id="@+id/pref_button_pm"
        style="@style/MainWindowButtonStyle"
        android:layout_marginTop="@dimen/main_button_margin_side"
        android:text="@string/pref_button"
        app:icon="@drawable/ic_gear" />

</RelativeLayout>